0904 Yifan [Fix]: 1.修正庫存數量呈現錯誤 2.去掉多餘的sweetalert 3.修正btn連在一起的問題 4.處理頁碼部分問題